# why-combinator

./: .env.example  .gitignore  HACKIINTHEBOX.md  PRD.md  README.md  ahkia.txt  alembic.ini  mypy.ini  pyproject.toml  todo.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/analytics/: diversity.py  metrics.py
app/api/: analytics.py  artifacts.py  auth.py  challenges.py  (+16 more)
scripts/: generate_client_sdk.py  generate_screenshots.py  load_test_checkpoint_contention.py  seed_default_challenges.py
tests/: conftest.py  test_agent.py  test_agent_productivity_api.py  test_agent_robustness.py  test_analytics.py  test_artifact_ast_fingerprinting.py  test_artifact_download_presign.py  test_artifact_retention_policy.py  test_budget_exhaustion_finalization.py  test_challenge_template_clone.py  test_checkpoint_adaptive_interval_scaling.py  test_checkpoint_backfill_jobs.py  test_checkpoint_jitter_control.py  test_checkpoint_resume_workflow.py  test_checkpoint_scoring_chaos_recovery.py  test_checkpoint_transaction_boundary.py  test_cli_integration.py  test_complexity_sophistication_policy.py  test_e2e_run_flow.py  test_emergent_behavior.py  test_engine.py  test_events.py  test_forward_config_scoring.py  test_judge_bulk_profile_import.py  test_judge_disagreement_api.py  test_judge_outlier_dampener.py  test_judge_profile_url_ingestion_guard.py  test_judge_profile_versioning.py  test_leaderboard_cache.py  test_leaderboard_determinism.py  test_leaderboard_pagination.py  test_leaderboard_segmentation.py  test_llm.py  test_malware_quarantine_integration.py  test_market_mechanics.py  test_market_simulation_analytics_api.py  test_models.py  test_non_production_penalties.py  test_novelty_strategy_selector.py  test_outbox_relay.py  (+32 more)
(+222 files in other folders)
