[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bengers-and-mesh-too"
version = "0.1.0"
description = "Hackathon orchestration service"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20.0",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "celery>=5.4.0",
  "fastapi>=0.111.0",
  "httpx>=0.28.0",
  "papermill>=2.6.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.0",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.0",
  "tinydb>=4.8.0",
  "uvicorn>=0.30.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
